--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,22 @@
 
 /*Navbar - mostly covered on Bootstrap*/
 
+.navbar-nav .nav-item a {
+    color: #ffffff;
+}
+
 /*Main Content*/
+
+.main-content {
+    margin: 10px 0 30px 0;
+    display: flex;
+    flex-direction: column;
+}
+
+#map {
+    width: 100%;
+    height: 500px;
+}
 
 /*Opening header and paragraph*/
 
@@ -160,6 +175,10 @@
 }
 
 @media (min-width: 992px) {
+
+    #map {
+        max-width: 1000px;
+    }
 
 }
 
