--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,20 @@
     margin: 10px 0 30px 0;
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.opening-image {
+    background-image: url("../images/main-image.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+}
+
+.main-image-shade {
+    background-color: rgb(0, 0, 0, 0.6);
+    height: 100%;
 }
 
 #map {
