--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,31 +10,6 @@
 
 /*Main Content*/
 
-.main-content {
-    margin: 10px 0 30px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.opening-image {
-    background-image: url("../images/main-image.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100%;
-}
-
-.main-image-shade {
-    background-color: rgb(0, 0, 0, 0.6);
-    height: 100%;
-}
-
-#map {
-    width: 100%;
-    height: 500px;
-}
-
 /*Opening header and paragraph*/
 
 .main-content-container {
@@ -44,12 +19,35 @@
 }
 
 .main-content {
+    margin: 0px 0 30px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.opening-image {
+    background-image: url("../images/main-image.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    color: #ffffff;
+    margin-bottom: 30px;
+    min-height: 300px;
+}
+
+.main-image-shade {
+    background-color: rgb(30, 30, 30, 0.8);
+    height: 300px;
     display: flex;
     justify-content: center;
-    width: 90%;
+    align-items: center;
 }
 
 .opening-intro {
+    width: 90%;
     margin: 10px 0;
 }
 
@@ -57,8 +55,17 @@
     font-size: 30px;
 }
 
-.intro-paragraph {
-    
+/*Main content and statistics on site*/
+
+.site-info {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+}
+
+#map {
+    width: 100%;
+    height: 500px;
 }
 
 /*Footer areas*/
