Javascript completed prior to trying new way of doing the locations

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,6 +196,10 @@
 }
 
 @media (min-width: 992px) {
+    
+    .opening-intro {
+        width: 80%;
+    }
 
     #map {
         max-width: 1000px;
@@ -204,6 +208,10 @@
 }
 
 @media (min-width: 1224px) {
+    
+    .opening-intro {
+        width: 70%;
+    }
     
 }
 
