--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,15 @@
     height: 500px;
 }
 
+#house-sales-bar-chart,
+#average-house-price-bar-chart {
+    height: 500px;
+    width: 100%;
+    margin: 20px 0;
+    overflow-x: scroll;
+    max-width: 900px;
+}
+
 /*Footer areas*/
 
 /*Footer top areas for about section and contact form*/
