--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,13 @@
 
 /*Navbar - mostly covered on Bootstrap*/
 
+.navbar {
+    position: sticky;
+    overflow: hidden;
+    top: 0;
+    z-index: 2;
+}
+
 .navbar-nav .nav-item a {
     color: #ffffff;
 }
@@ -12,7 +19,8 @@
 
 /*Opening header and paragraph*/
 
-.main-content-container {
+.main-content-container,
+.main-content-charts {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -34,7 +42,6 @@
     background-repeat: no-repeat;
     width: 100%;
     color: #ffffff;
-    margin-bottom: 30px;
     min-height: 300px;
 }
 
@@ -46,8 +53,12 @@
     align-items: center;
 }
 
-.opening-intro {
+.opening-text-container {
     width: 90%;
+}
+
+.opening-intro {
+    width: 100%;
     margin: 10px 0;
 }
 
@@ -57,8 +68,50 @@
 
 /*Main content and statistics on site*/
 
-.site-info {
+/*Heading and intro text to the different charts*/
+
+.main-content-charts {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.info-container {
     width: 90%;
+}
+
+.section-intro {
+    width: 100%;
+    margin: 20px 0;
+}
+
+.section-heading {
+    font-size: 25px;
+    font-weight: 500;
+}
+
+.section-paragraph {
+    margin-bottom: 0;
+}
+
+/*The individual charts*/
+
+.chart-intro {
+    width: 100%;
+}
+
+.chart-header {
+    font-size: 20px;
+}
+
+.chart-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.site-info {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -68,15 +121,22 @@
 #map {
     width: 100%;
     height: 500px;
+    margin: 10px 0 20px 0;
 }
 
 #house-sales-bar-chart,
 #average-house-price-bar-chart {
-    height: 500px;
+    height: 450px;
     width: 100%;
-    margin: 20px 0;
-    overflow-x: scroll;
+    margin: 5px 0;
     max-width: 900px;
+    overflow-x: scroll;
+}
+
+.smaller-charts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /*Footer areas*/
@@ -186,13 +246,18 @@
 
 @media (min-width: 768px) {
     
-    .map-intro {
-        width: 100%;
+    .section-intro {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
     }
     
+    .smaller-charts {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+        
     .footer-top {
         display: flex;
         flex-direction: row;
@@ -200,10 +265,7 @@
         align-items: flex-start;
     }
     
-    .footer-left {
-        width: 45%;
-    }
-    
+    .footer-left,
     .footer-right {
         width: 45%;
     }
@@ -214,38 +276,20 @@
 }
 
 @media (min-width: 992px) {
-    
-    .map-intro {
-        width: 80%;
-    }
-    
-    .opening-intro {
-        width: 80%;
-    }
-    
-    .map-intro {
-        
-    }
 
     #map {
         max-width: 950px;
-    }
-    
-    .footer-top {
-        width: 80%;
     }
 
 }
 
 @media (min-width: 1224px) {
     
-    .opening-intro {
-        width: 70%;
-    }
-    
+    .opening-text-container,
+    .section-intro,
+    .chart-intro,
     .footer-top {
-        width: 70%;
+        width: 75%;
     }
     
 }
-
