--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,11 @@
 
 /*The individual charts*/
 
+.price-chart,
+.sales-chart {
+    display: none;
+}
+
 .chart-intro {
     width: 100%;
 }
@@ -137,7 +142,7 @@
 #average-house-price-bar-chart,
 #house-sales-over-time,
 #house-prices-over-time {
-    height: 450px;
+    /*height: 450px;*/
     width: 100%;
     margin: 5px 0;
     max-width: 900px;
