--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,11 @@
     justify-content: center;
 }
 
+.main-content-charts {
+    margin: 20px 0;
+}
+
+
 .main-content {
     margin: 0px 0 30px 0;
     display: flex;
@@ -112,6 +117,7 @@
 
 .chart-intro {
     width: 100%;
+    margin: 20px 0;
 }
 
 .chart-header {
@@ -138,21 +144,24 @@
     margin: 10px 0 20px 0;
 }
 
+.chart-container {
+    display: flex;
+    justify-content: center;
+}
+
+.chart-area {
+    display: flex;
+    justify-content: center;
+}
+
 #house-sales-bar-chart,
 #average-house-price-bar-chart,
 #house-sales-over-time,
 #house-prices-over-time {
-    /*height: 450px;*/
     width: 100%;
     margin: 5px 0;
     max-width: 900px;
     overflow-x: scroll;
-}
-
-.smaller-charts {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 /*Footer areas*/
