--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,6 @@
     margin: 20px 0;
 }
 
-
 .main-content {
     margin: 0px 0 30px 0;
     display: flex;
@@ -68,7 +67,7 @@
 }
 
 .intro-heading {
-    font-size: 30px;
+    font-size: 35px;
 }
 
 /*Main content and statistics on site*/
@@ -81,7 +80,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 10px 0 20px 0;
 }
 
 .main-content-charts {
@@ -100,28 +98,106 @@
 }
 
 .section-heading {
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 500;
 }
 
-.section-paragraph {
-    margin-bottom: 0;
+/*Buttons*/
+
+#price-button {
+    background-color: #7D0CE8;
+    transition-property: background-color;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
+    border: 0;
+}
+
+#sales-button {
+    background-color: #FF0000;
+    transition-property: background-color;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
+    border: 0;
+}
+
+#hide-button {
+    background-color: #343A40;
+    transition-property: background-color;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
+    border: 0;
+}
+
+#price-button:hover {
+    transition-property: background-color;
+    background-color: #5808A3;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
+}
+
+#sales-button:hover {
+    transition-property: background-color;
+    background-color: #BF0000;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
+}
+
+#hide-button:hover {
+    transition-property: background-color;
+    background-color: #23272B;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
 }
 
 /*The individual charts*/
 
-.price-chart,
-.sales-chart {
+#price-section-title {
     display: none;
 }
 
-.chart-intro {
+#price-section-title.active {
+    display: flex;
     width: 100%;
-    margin: 20px 0;
+    height: 55px;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    margin-top: 20px;
+    background-color: #7D0CE8;
+}
+
+#sales-section-title {
+    display: none;
+}
+
+#sales-section-title.active {
+    display: flex;
+    width: 100%;
+    height: 55px;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    margin-top: 20px;
+    background-color: #FF0000;
+}
+
+#price-section-title h2,
+#sales-section-title h2 {
+    margin: 0;
+}
+
+.price-charts,
+.sales-charts {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 30px 0 0 0;
 }
 
 .chart-header {
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .chart-section {
@@ -144,23 +220,30 @@
     margin: 10px 0 20px 0;
 }
 
-.chart-container {
-    display: flex;
-    justify-content: center;
+.chart-intro {
+    width: 100%;
 }
 
-.chart-area {
+.price-charts,
+.sales-charts {
+    display: none;
+}
+
+.price-charts.active,
+.sales-charts.active {
     display: flex;
-    justify-content: center;
+    flex-flow: wrap;
 }
 
 #house-sales-bar-chart,
+#house-type-pie-chart,
 #average-house-price-bar-chart,
+#house-type-price-bar-chart,
 #house-sales-over-time,
 #house-prices-over-time {
     width: 100%;
-    margin: 5px 0;
-    max-width: 900px;
+    margin: 20px 0;
+    max-width: 850px;
     overflow-x: scroll;
 }
 
@@ -276,11 +359,11 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        margin: 10px 0 20px 0;
+        width: 90%;
     }
     
     .chart-toggle-buttons button {
-        margin: 0 20px;
+        margin: 20px 20px;
     }
     
     .section-intro {
@@ -293,6 +376,18 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+    }
+    
+    #house-sales-bar-chart,
+    #house-type-pie-chart,
+    #average-house-price-bar-chart,
+    #house-type-price-bar-chart,
+    #house-sales-over-time,
+    #house-prices-over-time {
+        width: 100%;
+        margin: 5px 0;
+        display: flex;
+        justify-content: center;
     }
         
     .footer-top {
@@ -313,27 +408,36 @@
 }
 
 @media (min-width: 992px) {
-
+    
     #map {
         max-width: 950px;
     }
     
-    #house-sales-bar-chart,
-    #average-house-price-bar-chart,
-    #house-sales-over-time,
-    #house-prices-over-time {
-        overflow-x: hidden;
+    #average-house-price-bar-chart {
+        width: 65%;
     }
-
+    
+    #house-type-price-bar-chart {
+        width: 35%;
+    }
+    
+    #house-sales-bar-chart {
+        width: 65%;
+    }
+    
+    #house-type-pie-chart {
+        width: 35%;
+    }
+    
 }
 
 @media (min-width: 1224px) {
     
     .opening-text-container,
     .section-intro,
-    .chart-intro,
+    .sales-charts,
+    .price-charts,
     .footer-top {
-        width: 90%;
+        width: 80%;
     }
-    
 }
